# gtfobinSUID

./: README.md  gtfobinsuid.py  pyproject.toml
.github/workflows/: publish.yml
